--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "build": "npm install && gulp build",
-    "deploy": "firebase deploy"
+    "build": "npm install && gulp build --codelabs-dir=codelabs",
+    "deploy": "firebase deploy",
+    "serve": "gulp serve --codelabs-dir=codelabs"
   },
   "devDependencies": {
     "autoprefixer": "^9.3.1",
