--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
-    "cleanUrls": true,
+    "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
